fix tms-app previewDist

--- a/packages/tms-app/src/index.html
+++ b/packages/tms-app/src/index.html
@@ -11,9 +11,8 @@
       <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="/main.css" />
       <link rel="icon" href="#" />
-    </head>
+    <script defer src="/bundled.js"></script></head>
     <body>
       <div id="app"><nav data-bs-theme="dark" style="min-height:50px" class="sticky-md-top px-3 py-2 navbar navbar-expand-md navbar-light bg-primary"><div class="flex-md-nowrap p-0 container-fluid"><a class="m-0 px-2 py-0 navbar-brand" href="/">Task Management System</a></div></nav><div style="flex:1;min-height:calc(100vh - 133px)" class="d-flex flex-column pt-3 container-fluid"><div class="centered-overlay"><div class="dots-loading"><div></div></div></div></div><footer class="border-top text-center small text-muted py-3"><p class="mb-2"><a class="mx-1" href="/">Home</a> <!-- -->|<!-- --> <a class="mx-1" href="/about">About Us</a> <!-- -->|<!-- --> <a class="mx-1" href="/terms">Terms</a></p><p class="m-0">Copyright © <!-- -->2023<!-- --> <a class="text-muted" href="/">Task Management System</a>. All rights reserved.</p></footer></div>
-      <script src="/bundled.js"></script>
     </body>
   </html>
